--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
 ---
 
 <div class="flex flex-col gap-12">
-  <div class="w-24 pt-20 pb-8"><img src="/logo/logo-3d-2.svg" /></div>
+  <div class="w-24 pt-20 pb-8"><img src="/logo/logo-b.svg" /></div>
   <div class="space-y-2">
     <h1 class="block text-5xl font-bold text-neutral-text">Sam Brocklehurst</h1>
     <h2 class="block text-3xl font-medium text-black/80">Full Stack Developer</h2>
