--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Hero from '../components/Hero.astro';
+import Projects from '../components/projects/Projects.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
   <main>
 		<Hero />
+		<Projects />
   </main>
 </Layout>
