--- a/src/components/projects/Projects.astro
+++ b/src/components/projects/Projects.astro
@@ -1,6 +1,9 @@
-<div class="grid gap-4 grid-cols-3 grid-rows-2 my-36 w-full h-[600px]">
-  <div class="bg-black/80 rounded-xl col-start-1 row-start-1 col-span-1 row-span-2 h-full w-full"></div>
-  <div class="bg-blue-950 rounded-xl h-full w-full"></div>
-  <div class="bg-green-500 rounded-xl h-full w-full"></div>
-  <div class="bg-blue-400 rounded-xl col-span-2 row-start-2 row-span-1 h-full w-full"></div>
+<div class="my-36">
+  <h2 class="text-lg mb-6">Featured projects</h2>
+  <div class="grid gap-4 grid-cols-3 grid-rows-2 h-[600px]">
+    <div class="border border-white/10 rounded-xl col-span-2 row-start-1 row-span-1 h-full w-full"></div>
+    <div class="border border-white/10 rounded-xl col-start-3 row-start-1 col-span-1 row-span-2 h-full w-full"></div>
+    <div class="border border-white/10 rounded-xl h-full w-full"></div>
+    <div class="border border-white/10 rounded-xl h-full w-full"></div>
+  </div>
 </div>
