--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro';
 import Hero from '../components/Hero.astro';
 import Projects from '../components/projects/Projects.astro';
 import Layout from '../layouts/Layout.astro';
@@ -6,7 +7,8 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
   <main>
-		<Hero />
-		<Projects />
+    <Hero />
+    <Projects />
   </main>
+  <Footer />
 </Layout>
