--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,15 +23,15 @@
 </html>
 
 <style is:global>
-  * {
+  body {
     font-family: 'Rubik', sans-serif;
-    background-color: #1e1e1e;
+    background-color: #0d0d0d;
     color: #e8e8e8;
   }
 
   *::selection {
     background-color: #e8e8e8;
-    color: #1e1e1e;
+    color: #0d0d0d;
   }
 
   .debug {
