--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,5 +10,5 @@ import Layout from '../layouts/Layout.astro';
     <Hero />
     <Projects />
   </main>
-  <Footer />
+  <!-- <Footer /> -->
 </Layout>
