--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,15 +11,15 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
   </div>
   <div class="space-y-2">
     <h1 class="block text-5xl font-bold">Sam Brocklehurst</h1>
-    <h2 class="block text-3xl font-medium opacity-80">Full Stack Developer</h2>
+    <h2 class="block text-3xl font-medium text-[#e8e8e8b3]">Full Stack Developer</h2>
   </div>
   <div class="grid grid-cols-2 gap-12">
     <div class="space-y-4">
-      <p>
+      <p class="text-[#e8e8e8cc]">
         I’m currently working at <Link href="https://www.asafe.com" target="_blank">A-SAFE</Link> as a software developer,
         helping to build the most advanced workplaces.
       </p>
-      <p>I’m interested in Next.js, React & TypeScript.</p>
+      <p class="text-[#e8e8e8cc]">I’m interested in Next.js, React & TypeScript.</p>
     </div>
     <div class="space-y-2 flex flex-col items-start">
       <Link href="mailto:hi@sambrock.com"><MailIcon /><span>Get in touch</span></Link>
