updated ui, added projects

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,10 +22,10 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
       <p class="text-[#e8e8e8cc]">I’m interested in Next.js, React & TypeScript.</p>
     </div>
     <div class="space-y-2 flex flex-col items-start">
-      <Link href="mailto:hi@sambrock.com"><MailIcon /><span>Get in touch</span></Link>
-      <Link href="https://github.com/sambrock" target="_blank"><GitHubIcon /><span>GitHub</span></Link>
+      <Link href="mailto:hi@sambrock.com"><MailIcon />Get in touch</Link>
+      <Link href="https://github.com/sambrock" target="_blank"><GitHubIcon />GitHub</Link>
       <Link href="https://www.linkedin.com/in/sam-brocklehurst/" target="_blank">
-        <LinkedInIcon /><span>LinkedIn</span>
+        <LinkedInIcon />LinkedIn
       </Link>
     </div>
   </div>
