--- a/src/components/projects/Filmq.astro
+++ b/src/components/projects/Filmq.astro
@@ -1,12 +1,13 @@
 ---
-import MockWindow from '../MockWindow.astro';
+import BrowserMockup from '../BrowserMockup.astro';
+import Project from './Project.astro';
 ---
 
-<div class="p-6 overflow-clip h-full hover:bg-[#000000] rounded-xl bg-white/5">
-  <div class="w-36">
+<Project class="hover:bg-[#000]">
+  <div class="w-28 flex items-center">
     <img src="/projects/filmq/filmlist-logo.svg" />
   </div>
-  <MockWindow class="mt-6">
+  <BrowserMockup>
     <img src="/projects/filmq/list.png" />
-  </MockWindow>
-</div>
+  </BrowserMockup>
+</Project>
