--- a/src/components/projects/Pace.astro
+++ b/src/components/projects/Pace.astro
@@ -1,10 +1,13 @@
 ---
-import MockWindow from '../MockWindow.astro';
-
+import PhoneMockup from '../PhoneMockup.astro';
+import Project from './Project.astro';
 ---
 
-<div class="p-6 overflow-clip h-full rounded-xl bg-white/5">
-  <div class="w-28">
-    <img src="/projects/pace/logo-no-bg.svg" />
+<Project class="hover:bg-[#1eba54]">
+  <div class="w-20">
+    <img src="/projects/pace/pace-logo-w.svg" />
   </div>
-</div>
+  <PhoneMockup>
+    <img src="/projects/pace/home.jpg" alt="Your Design" class="max-h-full max-w-full" />
+  </PhoneMockup>
+</Project>
