--- a/src/components/BrowserMockup.astro
+++ b/src/components/BrowserMockup.astro
@@ -1,12 +1,16 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
+import { clsx } from 'clsx';
 
-export interface Props extends HTMLAttributes<'div'> {}
+export type Props = HTMLAttributes<'div'>;
 
-const { ...attrs } = Astro.props;
+const props = Astro.props;
 ---
 
-<div class={`rounded-lg bg-white/10 shadow-2xl shadow-black/90 overflow-clip aspect-video ${attrs.class}`} {...attrs}>
+<div
+  class={clsx('rounded-lg bg-white/10 shadow-2xl shadow-black/90 overflow-clip aspect-video', props.class)}
+  {...props}
+>
   <div class="px-3 py-[6px] flex gap-[6px] border-b border-white/5">
     <div class="w-2 bg-white/10 aspect-square rounded-full"></div>
     <div class="w-2 bg-white/10 aspect-square rounded-full"></div>
