--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,7 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
     <h1 class="block text-5xl font-bold">Sam Brocklehurst</h1>
     <h2 class="block text-3xl font-medium text-[#e8e8e8b3]">Full Stack Developer</h2>
   </div>
-  <div class="grid grid-cols-2 gap-12">
+  <div class="grid grid-cols-[3fr,2fr] gap-12">
     <div class="space-y-4">
       <p class="text-[#e8e8e8cc]">
         I’m currently working at <Link href="https://www.asafe.com" target="_blank">A-SAFE</Link> as a software developer,
