--- a/src/components/PhoneMockup.astro
+++ b/src/components/PhoneMockup.astro
@@ -1,8 +1,9 @@
-<div class="relative rounded-[30px] border-2 border-white/10 group-hover:border-black/10">
-  <div class="absolute rounded-full top-3 h-4 w-16 bg-neutral-800 z-50 flex items-center left-1/2 -translate-x-1/2">
-    <div class="h-2 aspect-square rounded-full bg-white/10 ml-auto mr-2"></div>
+<div class="relative rounded-[30px] border-[8px] border-white/10 group-hover:border-black/10">
+  <div
+    class="notch absolute bg-[#303030] group-hover:bg-black/10 top-0 h-5 rounded-b-xl w-36 left-1/2 -translate-x-1/2 z-50 before:rounded-xl"
+  >
   </div>
-  <div class="rounded-[28px] relative overflow-clip border-[6px] border-white/5 group-hover:border-black/5">
+  <div class="rounded-[20px] relative overflow-clip group-hover:border-black/5">
     <slot />
   </div>
 </div>
