--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,9 @@
     font-family: 'Rubik', sans-serif;
     background-color: #0d0d0d;
     color: #e8e8e8;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizelegibility;
+    text-size-adjust: none;
   }
 
   *::selection {
