--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
-import Footer from '../components/Footer.astro';
 import Hero from '../components/Hero.astro';
-import Projects from '../components/projects/Projects.astro';
+import Projects from '../components/Projects.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -10,5 +9,4 @@ import Layout from '../layouts/Layout.astro';
     <Hero />
     <Projects />
   </main>
-  <!-- <Footer /> -->
 </Layout>
