--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,11 +4,8 @@ import Filmq from './projects/Filmq.astro';
 import Vendee from './projects/Vendee.astro';
 ---
 
-<div class="my-36">
-  <h2 class="font-medium mb-6">Featured projects</h2>
-  <div class="grid grid-cols-2 gap-4">
-    <Filmq class="col-span-2" />
-    <Vendee />
-    <Exterra />
-  </div>
+<div class="grid grid-cols-2 gap-2 my-36">
+  <Filmq class="col-span-2" />
+  <Vendee />
+  <Exterra />
 </div>
