--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,20 +6,20 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
 ---
 
 <div class="flex flex-col gap-12 py-8">
-  <div class="w-20 pt-12 pb-8">
-    <img src="/logo/logo-w.svg" class="select-none" />
+  <div class="w-24 pt-24 pb-8">
+    <img src="/logo/logo-new-2.svg" class="select-none" />
   </div>
-  <div class="space-y-2">
+  <div class="space-y-2 gradient">
     <h1 class="block text-5xl font-bold">Sam Brocklehurst</h1>
-    <h2 class="block text-3xl font-medium text-[#e8e8e8b3]">Full Stack Developer</h2>
+    <h2 class="block text-3xl font-medium">Full Stack Developer</h2>
   </div>
-  <div class="grid grid-cols-[3fr,2fr] gap-12">
+  <div class="grid grid-cols-2 gap-12">
     <div class="space-y-4">
-      <p class="text-[#e8e8e8cc]">
+      <p class="text-secondary">
         I’m currently working at <Link href="https://www.asafe.com" target="_blank">A-SAFE</Link> as a software developer,
         helping to build the most advanced workplaces.
       </p>
-      <p class="text-[#e8e8e8cc]">I’m interested in Next.js, React & TypeScript.</p>
+      <p class="text-secondary">I’m interested in Next.js, React & TypeScript.</p>
     </div>
     <div class="space-y-2 flex flex-col items-start">
       <Link href="mailto:hi@sambrock.com"><MailIcon />Get in touch</Link>
