--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,6 +1,5 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { clsx } from 'clsx';
 
 export type Props = HTMLAttributes<'a'>;
 
@@ -8,11 +7,11 @@ const props = Astro.props;
 ---
 
 <a
-  class={clsx(
-    'inline-flex items-center gap-2 text-[#e8e8e8cc] hover:text-[#fff] transition-colors',
+  class:list={[
+    'inline-flex items-center gap-2 text-secondary hover:text-default transition-colors',
     props.target === '_blank' && 'after:content-["↗"] after:text-xs after:-ml-1',
-    props.class
-  )}
+    props.class,
+  ]}
   {...props}
 >
   <slot />
