--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,15 +1,21 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { clsx } from 'clsx';
+import ProjectWrapper from './ProjectWrapper.svelte';
 
 export type Props = HTMLAttributes<'div'>;
 
 const props = Astro.props;
 ---
 
-<div
-  class={clsx('group grid gap-6 grid-rows-[26px,1fr] p-6 overflow-clip rounded-xl bg-white/5 h-[360px]', props.class)}
-  {...props}
->
-  <slot />
+<div class:list={['group select-none', props.class]} {...props}>
+  <ProjectWrapper client:load>
+    <div
+      class:list={[
+        'group grid gap-6 grid-rows-[26px,1fr] p-6 overflow-clip rounded-xl border border-white/5 bg-white/5 hover:bg-white/10 hover:border-white/10 transition-all h-[360px]',
+        // props.class,
+      ]}
+    >
+      <slot />
+    </div>
+  </ProjectWrapper>
 </div>
