--- a/src/components/projects/Exterra.astro
+++ b/src/components/projects/Exterra.astro
@@ -1,19 +1,24 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { clsx } from 'clsx';
 import BrowserMockup from '../BrowserMockup.astro';
 import Project from '../Project.astro';
+import ProjectActions from '../ProjectActions.astro';
 
 export type Props = HTMLAttributes<'div'>;
 
 const { slot, ...props } = Astro.props;
 ---
 
-<Project class={clsx(props.class)} {...props}>
-  <div class="w-28 flex items-center">
-    <img src="/projects/exterra/exterra.svg" />
+<Project {...props}>
+  <div class="flex items-center justify-between">
+    <div class="w-28">
+      <img src="/projects/exterra/exterra.svg" />
+    </div>
+    <ProjectActions githubHref="https://github.com/sambrock/exterra" projectHref="https://exterra.sambrock.com" />
   </div>
-  <BrowserMockup class="w-[700px]">
-    <img src="/projects/exterra/home.webp" />
-  </BrowserMockup>
+  <div class="relative">
+    <BrowserMockup class="absolute w-[720px]">
+      <img src="/projects/exterra/home.webp" />
+    </BrowserMockup>
+  </div>
 </Project>
