--- a/src/components/projects/Filmq.astro
+++ b/src/components/projects/Filmq.astro
@@ -1,19 +1,22 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { clsx } from 'clsx';
 import BrowserMockup from '../BrowserMockup.astro';
 import Project from '../Project.astro';
+import ProjectActions from '../ProjectActions.astro';
 
 export type Props = HTMLAttributes<'div'>;
 
 const { slot, ...props } = Astro.props;
 ---
 
-<Project class={clsx('hover:bg-[#000]', props.class)} {...props}>
-  <div class="w-28 flex items-center">
-    <img src="/projects/filmq/filmlist-logo.svg" />
+<Project class:list={['hover:bg-[#000]', props.class]} {...props}>
+  <div class="flex items-center justify-between">
+    <div class="w-28 flex items-center">
+      <img src="/projects/filmq/filmlist-logo.svg" />
+    </div>
+    <ProjectActions projectHref="https://filmq.vercel.app" githubHref="https://github.com/sambrock/filmq" />
   </div>
   <BrowserMockup>
-    <img src="/projects/filmq/list.png" />
+    <img src="/projects/filmq/home.png" />
   </BrowserMockup>
 </Project>
