--- a/src/components/projects/Vendee.astro
+++ b/src/components/projects/Vendee.astro
@@ -1,19 +1,27 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { clsx } from 'clsx';
 import BrowserMockup from '../BrowserMockup.astro';
 import Project from '../Project.astro';
+import ProjectActions from '../ProjectActions.astro';
 
 export type Props = HTMLAttributes<'div'>;
 
 const { slot, ...props } = Astro.props;
 ---
 
-<Project class={clsx(props.class)} {...props}>
-  <div class="w-24">
-    <img src="/projects/vendee/logo-w.svg" />
+<Project {...props}>
+  <div class="flex items-center justify-between">
+    <div class="w-24">
+      <img src="/projects/vendee/logo-w.svg" />
+    </div>
+    <ProjectActions
+      githubHref="https://github.com/sambrock/vendee"
+      projectHref="https://sambrock.com/sketchbooks/vendee.pdf"
+    />
   </div>
-  <BrowserMockup class="w-[700px]">
-    <img src="/projects/vendee/dashboard.webp" />
-  </BrowserMockup>
+  <div class="relative">
+    <BrowserMockup class="absolute w-[740px]">
+      <img src="/projects/vendee/dashboard.webp" />
+    </BrowserMockup>
+  </div>
 </Project>
