cleanup, updated ui

--- a/src/components/BrowserMockup.astro
+++ b/src/components/BrowserMockup.astro
@@ -7,7 +7,10 @@ const props = Astro.props;
 ---
 
 <div
-  class:list={['rounded-lg bg-white/10 shadow-2xl shadow-black/90 overflow-clip aspect-video', props.class]}
+  class:list={[
+    'rounded-lg bg-white/10 shadow-2xl shadow-black/90 overflow-clip aspect-video border border-white/5',
+    props.class,
+  ]}
   {...props}
 >
   <div class="px-3 py-[6px] flex gap-[6px] border-b border-white/5">
