--- a/src/components/projects/Exterra.astro
+++ b/src/components/projects/Exterra.astro
@@ -12,13 +12,13 @@ const { slot, ...props } = Astro.props;
 <Project {...props}>
   <div class="flex items-center justify-between">
     <div class="w-28">
-      <img src="/projects/exterra/exterra.svg" />
+      <img src="/projects/exterra/logo.svg" alt="Exterra logo" />
     </div>
     <ProjectActions githubHref="https://github.com/sambrock/exterra" projectHref="https://exterra.sambrock.com" />
   </div>
   <div class="relative">
-    <BrowserMockup class="absolute w-[720px]">
-      <img src="/projects/exterra/home.webp" />
+    <BrowserMockup class="absolute w-[740px]">
+      <img src="/projects/exterra/home.webp" alt="Exterra web app" />
     </BrowserMockup>
   </div>
 </Project>
