--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,14 +6,14 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
 ---
 
 <div class="flex flex-col gap-12 py-8">
-  <div class="w-24 pt-24 pb-8">
-    <img src="/logo/logo-new-2.svg" class="select-none" />
+  <div class="w-16 md:w-24 pt-12 md:pt-24 pb-8">
+    <img src="/logo/logo.svg" class="select-none" alt="Logo" />
   </div>
   <div class="space-y-2 gradient">
-    <h1 class="block text-5xl font-bold">Sam Brocklehurst</h1>
-    <h2 class="block text-3xl font-medium">Full Stack Developer</h2>
+    <h1 class="block text-4xl md:text-5xl font-bold">Sam Brocklehurst</h1>
+    <h2 class="block text-2xl md:text-3xl font-medium">Full Stack Developer</h2>
   </div>
-  <div class="grid grid-cols-2 gap-12">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
     <div class="space-y-4">
       <p class="text-secondary">
         I’m currently working at <Link href="https://www.asafe.com" target="_blank">A-SAFE</Link> as a software developer,
