--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,12 +11,16 @@
       rel="stylesheet"
     />
 
+    <!-- <link rel="manifest" href="/site.webmanifest" /> -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon//favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff1700" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <div class="md:max-w-5xl mx-auto">
+    <div class="px-4 lg:px-0 md:max-w-5xl mx-auto">
       <slot />
     </div>
   </body>
