--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro';
 import Hero from '../components/Hero.astro';
 import Projects from '../components/Projects.astro';
 import Layout from '../layouts/Layout.astro';
@@ -9,4 +10,5 @@ import Layout from '../layouts/Layout.astro';
     <Hero />
     <Projects />
   </main>
+  <Footer />
 </Layout>
