--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -13,6 +13,7 @@ const props = Astro.props;
       class:list={[
         'group grid gap-4 md:gap-6 grid-rows-[26px,1fr] p-4 md:p-6 overflow-clip rounded-xl border border-white/5 bg-white/5 hover:bg-white/10 hover:border-white/10 transition-all h-[280px] md:h-[360px]',
       ]}
+      tabindex="0"
     >
       <slot />
     </div>
