--- a/src/components/projects/Vendee.astro
+++ b/src/components/projects/Vendee.astro
@@ -17,6 +17,7 @@ const { slot, ...props } = Astro.props;
     <ProjectActions
       githubHref="https://github.com/sambrock/vendee"
       projectHref="https://sambrock.com/sketchbooks/vendee.pdf"
+      projectLabel="Demo"
     />
   </div>
   <div class="relative">
