--- a/src/components/BrowserMockup.astro
+++ b/src/components/BrowserMockup.astro
@@ -8,7 +8,7 @@ const props = Astro.props;
 
 <div
   class:list={[
-    'rounded-lg bg-white/10 shadow-2xl shadow-black/90 overflow-clip aspect-video border border-white/5',
+    'rounded-lg bg-white/10 shadow-2xl shadow-black overflow-clip aspect-video border border-white/5',
     props.class,
   ]}
   {...props}
