--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,14 +6,16 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
 ---
 
 <div class="flex flex-col gap-12 py-8">
-  <div class="w-16 md:w-24 pt-12 md:pt-24 pb-8">
+  <div class="w-16 md:w-24 pt-12 md:pt-24 pb-8 animate-in-logo">
     <img src="/logo/logo.svg" class="select-none" alt="Logo" />
   </div>
   <div class="space-y-2 gradient">
-    <h1 class="block text-4xl md:text-5xl font-bold">Sam Brocklehurst</h1>
-    <h2 class="block text-2xl md:text-3xl font-medium">Full Stack Developer</h2>
+    <h1 class="block text-4xl md:text-5xl font-bold animate-in-hero-main">Sam Brocklehurst</h1>
+    <h2 class="block text-2xl md:text-3xl font-medium text-secondary animate-in-hero-secondary">
+      Full Stack Developer
+    </h2>
   </div>
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-12 animate-in-main-text">
     <div class="space-y-4">
       <p class="text-secondary">
         I’m currently working at <Link href="https://www.asafe.com" target="_blank">A-SAFE</Link> as a software developer,
@@ -30,3 +32,29 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
     </div>
   </div>
 </div>
+
+<style is:inline>
+  @keyframes logo {
+    from {
+      transform: scale(0.9);
+      opacity: 0;
+    }
+    to {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+
+  .animate-in-logo {
+    animation: 1000ms ease 0ms 1 normal backwards running logo;
+  }
+  .animate-in-hero-main {
+    animation: 1000ms ease 500ms 1 normal backwards running in-y;
+  }
+  .animate-in-hero-secondary {
+    animation: 1000ms ease 700ms 1 normal backwards running in-y;
+  }
+  .animate-in-main-text {
+    animation: 800ms ease 1200ms 1 normal backwards running fade-in;
+  }
+</style>
