--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -69,7 +69,18 @@
 
   @keyframes in-y {
     from {
-      transform: translateY(12px);
+      transform: translateY(20px);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes in-y-2 {
+    from {
+      transform: translateY(-12px);
       opacity: 0;
     }
     to {
