renamed some files

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,13 +1,13 @@
 ---
 import Exterra from './projects/Exterra.astro';
-import Filmq from './projects/Filmq.astro';
+import Filmlist from './projects/Filmlist.astro';
 import Vendee from './projects/Vendee.astro';
 ---
 
 <div class="space-y-4 my-32">
   <h2 class="animate-in-projects-title">Featured projects</h2>
   <div class="grid grid-cols-1 md:grid-cols-2 gap-2 animate-in-projects">
-    <Filmq class="md:col-span-2" />
+    <Filmlist class="md:col-span-2" />
     <Vendee />
     <Exterra />
   </div>
