--- a/src/components/projects/Filmlist.astro
+++ b/src/components/projects/Filmlist.astro
@@ -12,13 +12,13 @@ const { slot, ...props } = Astro.props;
 <Project class:list={[props.class]} {...props}>
   <div class="flex items-center justify-between">
     <div class="w-28 h-full flex items-center">
-      <img src="/projects/filmq/logo.svg" alt="FILMQ logo" class="h-full" />
+      <img src="/projects/filmlist/logo.svg" alt="Filmlist logo" class="h-full" />
     </div>
-    <ProjectActions projectHref="https://filmq.vercel.app" githubHref="https://github.com/sambrock/filmq" />
+    <ProjectActions projectHref="https://filmlist.sambrock.app" githubHref="https://github.com/sambrock/filmlist" />
   </div>
   <div class="relative">
     <BrowserMockup class="absolute w-[740px] md:w-full">
-      <img src="/projects/filmq/home.webp" alt="FILMQ web app" />
+      <img src="/projects/filmlist/home.webp" alt="FILMLIST web app" />
     </BrowserMockup>
   </div>
 </Project>
