--- a/src/components/projects/Filmlist.astro
+++ b/src/components/projects/Filmlist.astro
@@ -14,7 +14,7 @@ const { slot, ...props } = Astro.props;
     <div class="w-28 h-full flex items-center">
       <img src="/projects/filmlist/logo.svg" alt="Filmlist logo" class="h-full" />
     </div>
-    <ProjectActions projectHref="https://filmlist.sambrock.app" githubHref="https://github.com/sambrock/filmlist" />
+    <ProjectActions projectHref="https://filmlist.sambrock.com" githubHref="https://github.com/sambrock/filmlist" />
   </div>
   <div class="relative">
     <BrowserMockup class="absolute w-[740px] md:w-full">
