--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
     <div class="space-y-4">
       <p class="text-secondary">
         I’m currently working at <Link href="https://www.asafe.com" target="_blank">A-SAFE</Link> as a software developer,
-        helping to build the most advanced workplaces.
+        helping to build the world's most advanced workplaces.
       </p>
       <p class="text-secondary">I’m interested in Next.js, React & TypeScript.</p>
     </div>
