--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -98,3 +98,37 @@
     }
   }
 </style>
+
+<script>
+  console.log(
+    `%c
+
+      ~G&&&&&@@@&&&&&&&&&&&&&&J        
+     !G&@&&&&#5?Y#@&&&&&&&&&&&&@5.      
+  .7B@@&&&&&@G   ^B@&&&&&&&&&&&&@B^     
+:?B@@&&&&&&&&&5.  .P@&&&&&&&&&&&&@#!    
+P@@&&&&&&&&&&&@B^   J&@&&&&&&&&&&&&&J   
+:5@&&&&&&&&&&&&@#!   !#@&&&&&&&&&&&&@P. 
+  J&@&&&&&&&&&&&@&J   ^B@@@@@@@@@@@@@@B:
+   !#@@@@@@@@@@@@@@P   .?YYYYYYYYYYYYY?.
+    ^Y5555555555555?                    
+                    75555555555555Y~    
+ 7YYYYYYYYYYYYY?:   Y@@@@@@@@@@@@@@&?   
+.G@@@@@@@@@@@@@@#~   ?&@&&&&&&&&&&&&@Y  
+ .Y@&&&&&&&&&&&&@&7   ~#@&&&&&&&&&&&&@G:
+   ?&@&&&&&&&&&&&&@Y   :G@&&&&&&&&&&&&@B
+    ~#@&&&&&&&&&&&&@G:   Y&&&&&&&&&@@#J^
+     :G@&&&&&&&&&&&&@#~   5@&&&&&@@B?.  
+       Y@&&&&&&&&&&&&@&5?Y#&&&&@&G7.    
+        ?#&&&&&&&&&&&&&@@@&&&&&G!     
+  `,
+    'color: #ff1700'
+  );
+
+  console.log('%c Thanks for visiting my portfolio! ', 'color: #ffffff');
+  console.log("%c If you're interested in working together, please get in touch! ", 'color: #ffffff');
+  console.log('%c -', 'color: #ffffff; font-weight: bold');
+  console.log('%c Also, here are some secret links:', 'color: #ffffff; font-weight: bold');
+  console.log('%c - https://sambrock.com/projects/pace/pace.pdf (An unfeatured project)', 'color: #ffffff;');
+  console.log('%c - https://filmlist.sambrock.com/v/ayjslyrgiddn (Some of my favourite films)', 'color: #ffffff;');
+</script>
