--- a/src/components/projects/Vendee.astro
+++ b/src/components/projects/Vendee.astro
@@ -16,7 +16,7 @@ const { slot, ...props } = Astro.props;
     </div>
     <ProjectActions
       githubHref="https://github.com/sambrock/vendee"
-      projectHref="https://sambrock.com/projects/vendee/vendee.pdf"
+      projectHref="https://sambrock.com/projects/vendee.pdf"
       projectLabel="Demo"
     />
   </div>
