--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -102,7 +102,6 @@
 <script>
   console.log(
     `%c
-
       ~G&&&&&@@@&&&&&&&&&&&&&&J        
      !G&@&&&&#5?Y#@&&&&&&&&&&&&@5.      
   .7B@@&&&&&@G   ^B@&&&&&&&&&&&&@B^     
@@ -129,6 +128,6 @@ P@@&&&&&&&&&&&@B^   J&@&&&&&&&&&&&&&J
   console.log("%c If you're interested in working together, please get in touch! ", 'color: #ffffff');
   console.log('%c -', 'color: #ffffff; font-weight: bold');
   console.log('%c Also, here are some secret links:', 'color: #ffffff; font-weight: bold');
-  console.log('%c - https://sambrock.com/projects/pace/pace.pdf (An unfeatured project)', 'color: #ffffff;');
+  console.log('%c - https://sambrock.com/projects/pace.pdf (An unfeatured project)', 'color: #ffffff;');
   console.log('%c - https://filmlist.sambrock.com/v/ayjslyrgiddn (Some of my favourite films)', 'color: #ffffff;');
 </script>
