--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <!-- <link rel="manifest" href="/site.webmanifest" /> -->
+    <link rel="manifest" href="/site.webmanifest" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon//favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
@@ -125,9 +125,8 @@ P@@&&&&&&&&&&&@B^   J&@&&&&&&&&&&&&&J
   );
 
   console.log('%c Thanks for visiting my portfolio! ', 'color: #ffffff');
-  console.log("%c If you're interested in working together, please get in touch! ", 'color: #ffffff');
   console.log('%c -', 'color: #ffffff; font-weight: bold');
-  console.log('%c Also, here are some secret links:', 'color: #ffffff; font-weight: bold');
+  console.log('%c Here are some secret links:', 'color: #ffffff; font-weight: bold');
   console.log('%c - https://sambrock.com/projects/pace.pdf (An unfeatured project)', 'color: #ffffff;');
   console.log('%c - https://filmlist.sambrock.com/v/ayjslyrgiddn (Some of my favourite films)', 'color: #ffffff;');
 </script>
