--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,8 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff1700" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#ffffff" />
+
+    <meta name="description" content="Sam Brocklehurst is a full stack developer based in the UK." />
   </head>
   <body>
     <div class="px-4 lg:px-0 md:max-w-5xl mx-auto">
