--- a/src/components/projects/Filmlist.astro
+++ b/src/components/projects/Filmlist.astro
@@ -12,7 +12,7 @@ const { slot, ...props } = Astro.props;
 <Project class:list={[props.class]} {...props}>
   <div class="flex items-center justify-between">
     <div class="w-28 h-full flex items-center">
-      <img src="/projects/filmlist/logo.svg" alt="Filmlist logo" class="h-full" />
+      <img src="/projects/filmlist/filmlist-logo.svg" alt="Filmlist logo" class="h-full" />
     </div>
     <ProjectActions projectHref="https://filmlist.sambrock.com" githubHref="https://github.com/sambrock/filmlist" />
   </div>
