--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@
     <meta name="description" content="Sam Brocklehurst is a full stack developer based in the UK." />
   </head>
   <body>
-    <div class="px-4 lg:px-0 md:max-w-5xl mx-auto">
+    <div class="px-4 md:max-w-5xl mx-auto">
       <slot />
     </div>
   </body>
@@ -102,33 +102,8 @@
 </style>
 
 <script>
-  console.log(
-    `%c
-      ~G&&&&&@@@&&&&&&&&&&&&&&J        
-     !G&@&&&&#5?Y#@&&&&&&&&&&&&@5.      
-  .7B@@&&&&&@G   ^B@&&&&&&&&&&&&@B^     
-:?B@@&&&&&&&&&5.  .P@&&&&&&&&&&&&@#!    
-P@@&&&&&&&&&&&@B^   J&@&&&&&&&&&&&&&J   
-:5@&&&&&&&&&&&&@#!   !#@&&&&&&&&&&&&@P. 
-  J&@&&&&&&&&&&&@&J   ^B@@@@@@@@@@@@@@B:
-   !#@@@@@@@@@@@@@@P   .?YYYYYYYYYYYYY?.
-    ^Y5555555555555?                    
-                    75555555555555Y~    
- 7YYYYYYYYYYYYY?:   Y@@@@@@@@@@@@@@&?   
-.G@@@@@@@@@@@@@@#~   ?&@&&&&&&&&&&&&@Y  
- .Y@&&&&&&&&&&&&@&7   ~#@&&&&&&&&&&&&@G:
-   ?&@&&&&&&&&&&&&@Y   :G@&&&&&&&&&&&&@B
-    ~#@&&&&&&&&&&&&@G:   Y&&&&&&&&&@@#J^
-     :G@&&&&&&&&&&&&@#~   5@&&&&&@@B?.  
-       Y@&&&&&&&&&&&&@&5?Y#&&&&@&G7.    
-        ?#&&&&&&&&&&&&&@@@&&&&&G!     
-  `,
-    'color: #ff1700'
-  );
-
-  console.log('%c Thanks for visiting my portfolio! ', 'color: #ffffff');
-  console.log('%c -', 'color: #ffffff; font-weight: bold');
-  console.log('%c Here are some secret links:', 'color: #ffffff; font-weight: bold');
-  console.log('%c - https://sambrock.com/projects/pace.pdf (An unfeatured project)', 'color: #ffffff;');
-  console.log('%c - https://filmlist.sambrock.com/v/ayjslyrgiddn (Some of my favourite films)', 'color: #ffffff;');
+  console.log('Thanks for visiting my portflio!');
+  console.log('Here are some secret links:');
+  console.log('- https://sambrock.com/projects/pace.pdf (An unfeatured project)');
+  console.log('- https://filmlist.sambrock.com/v/ayjslyrgiddn (Some of my favourite films)');
 </script>
