--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
   <div class="w-16 md:w-24 pt-12 md:pt-24 pb-8 animate-in-logo">
     <img src="/logo/logo.svg" class="select-none" alt="Logo" />
   </div>
-  <div class="space-y-2 gradient animate-in-hero">
+  <div class="space-y-1 md:space-y-2 gradient animate-in-hero">
     <h1 class="block text-4xl md:text-5xl font-bold animate-in-hero-main">Sam Brocklehurst</h1>
     <h2 class="block text-2xl md:text-3xl font-medium text-secondary animate-in-hero-main-secondary">
       Full Stack Developer
