added analytics, updated project

--- a/src/components/projects/Exterra.astro
+++ b/src/components/projects/Exterra.astro
@@ -11,8 +11,8 @@ const { slot, ...props } = Astro.props;
 
 <Project {...props}>
   <div class="flex items-center justify-between">
-    <div class="w-28">
-      <img src="/projects/exterra/logo.svg" alt="Exterra logo" />
+    <div class="w-36">
+      <img src="/projects/exterra/logo-3.svg" alt="Exterra logo" />
     </div>
     <ProjectActions githubHref="https://github.com/sambrock/exterra" projectHref="https://exterra.sambrock.com" />
   </div>
