--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro';
 import Projects from '../components/Projects.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
+  <Header />
   <main>
     <Hero />
     <Projects />
